Fix bug for displaying Persian information in realtime

--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -6,7 +6,7 @@
   },
   "navbar": {
     "weather_dashboard": "داشبورد آب و هوا",
-    "searchـyourـlocation": "مکان خود را جستجو کنید",
+    "searchـyourـlocation": "مکان مورد نظر را جستجو کنید",
     "mode": "حالت",
     "light": "روشن",
     "dark": "تاریک",
