--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -12,5 +12,28 @@
     "dark": "تاریک",
     "language": "زبان",
     "exit": "خروج"
+  },
+  "temperatureInfo": {
+    "feels_like" : "درجه احساس می شود"
+  },
+  "temperatureChart": {
+    "average_monthly_temperature" : "میانگین دمای ماهانه"
+  },
+  "weatherDetails": {
+    "2_weeks_forecast": "پیش بینی 2 هفته",
+    "today": "امروز"
+  },
+  "week": {
+    "Sat": "شنبه",
+    "Sun": "یکشنبه",
+    "Mon": "دوشنبه",
+    "Tue": "سه‌شنبه",
+    "Wed": "چهارشنبه",
+    "Thu": "پنجشنبه",
+    "Fri": "جمعه"
+  },
+  "footer": {
+    "contact_us": "تماس با ما",
+    "desc": "همه حقوق این سایت برای شرکت مهندسی نادین صدر آریا محفوظ است."
   }
 }
